fix: update package.json file

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "typeScript",
     "highlighter",
     "highlight",
-    "matches","multiple","multi",
+    "matches",
+    "multiple",
+    "multi",
     "occurrences",
     "search",
     "substring",
